--- a/css/alivio_v2.css
+++ b/css/alivio_v2.css
@@ -1509,31 +1509,31 @@ img {
 
 @font-face {
     font-family: 'Neutrifpro';
-    src: url('https://cdn.joinlucid.com/AlivioPay-Website/NeutrifPro-SemiBold.ttf') format('truetype');
+    src: url('./fonts/NeutrifPro-SemiBold.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
 }
 @font-face {
     font-family: 'Neutrifpro';
-    src: url('https://cdn.joinlucid.com/AlivioPay-Website/NeutrifPro-Bold.ttf') format('truetype');
+    src: url('./fonts/NeutrifPro-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
 }
 @font-face {
     font-family: 'Neutrifpro';
-    src: url('https://cdn.joinlucid.com/AlivioPay-Website/NeutrifPro-Regular.ttf') format('truetype');
+    src: url('./fonts/NeutrifPro-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 @font-face {
     font-family: 'Neutrifpro';
-    src: url('https://cdn.joinlucid.com/AlivioPay-Website/NeutrifPro-Light.ttf') format('truetype');
+    src: url('./fonts/NeutrifPro-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
   }
 @font-face {
     font-family: 'Neutrifpro';
-    src: url('https://cdn.joinlucid.com/AlivioPay-Website/NeutrifPro-Medium.ttf') format('truetype');
+    src: url('./fonts/NeutrifPro-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
 }
